force-app/main/default/objects/Organization_Contact__c/Organization_Contact__c.object-meta.xml
<CustomObject>
    <customHelpPage>HelpOrganizationContact</customHelpPage>
    <description>A contact that works for a Volunteer organization.</description>
    <label>Organization Contact</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Volunteer Org Contact Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>