force-app/main/default/objects/Organization_Contact__c/fields/First_National_Contact_Relation__c.field-meta.xml
<CustomField>
    <fullName>First_National_Contact_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First National Contact Relation</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Volunteer_Org_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>