force-app/main/default/objects/Organization_Contact__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>