force-app/main/default/objects/Organization_Contact__c/fields/Mailing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_Province__c</fullName>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mailing_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alabama (AL)</fullName>
            </value>
            <value>
                <fullName>Alaska (AK)</fullName>
            </value>
            <value>
                <fullName>Alberta (AB)</fullName>
            </value>
            <value>
                <fullName>Arizona (AZ)</fullName>
            </value>
            <value>
                <fullName>Arkansas (AR)</fullName>
            </value>
            <value>
                <fullName>British Columbia (BC)</fullName>
            </value>
            <value>
                <fullName>California (CA)</fullName>
            </value>
            <value>
                <fullName>Colorado (CO)</fullName>
            </value>
            <value>
                <fullName>Connecticut (CT)</fullName>
            </value>
            <value>
                <fullName>Delaware (DE)</fullName>
            </value>
            <value>
                <fullName>District of Columbia (DC)</fullName>
            </value>
            <value>
                <fullName>Florida (FL)</fullName>
            </value>
            <value>
                <fullName>Georgia (GA)</fullName>
            </value>
            <value>
                <fullName>Hawaii (HI)</fullName>
            </value>
            <value>
                <fullName>Idaho (ID)</fullName>
            </value>
            <value>
                <fullName>Illinois (IL)</fullName>
            </value>
            <value>
                <fullName>Indiana (IN)</fullName>
            </value>
            <value>
                <fullName>Iowa (IA)</fullName>
            </value>
            <value>
                <fullName>Kansas (KS)</fullName>
            </value>
            <value>
                <fullName>Kentucky (KY)</fullName>
            </value>
            <value>
                <fullName>Louisiana (LA)</fullName>
            </value>
            <value>
                <fullName>Maine (ME)</fullName>
            </value>
            <value>
                <fullName>Manitoba (MB)</fullName>
            </value>
            <value>
                <fullName>Maryland (MD)</fullName>
            </value>
            <value>
                <fullName>Massachusetts (MA)</fullName>
            </value>
            <value>
                <fullName>Michigan (MI)</fullName>
            </value>
            <value>
                <fullName>Minnesota (MN)</fullName>
            </value>
            <value>
                <fullName>Mississippi (MS)</fullName>
            </value>
            <value>
                <fullName>Missouri (MO)</fullName>
            </value>
            <value>
                <fullName>Montana (MT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>