force-app/main/default/objects/Organization_Contact__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>