force-app/main/default/objects/Organization_Contact__c/fields/Mailing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>