force-app/main/default/objects/Organization_Contact__c/fields/Organization_Website__c.field-meta.xml
<CustomField>
    <fullName>Organization_Website__c</fullName>
    <formula>IF(Volunteer_Organization__r.Website__c = &quot;&quot;, &quot;&quot;, IF(LEFT(Volunteer_Organization__r.Website__c, 5) = &quot;http:&quot;, HYPERLINK( Volunteer_Organization__r.Website__c , Volunteer_Organization__r.Website__c ), HYPERLINK( &quot;http:&quot; &amp; Volunteer_Organization__r.Website__c , Volunteer_Organization__r.Website__c )))</formula>
    <label>Organization Website</label>
    <type>Text</type>
</CustomField>