force-app/main/default/objects/Organization_Contact__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>