force-app/main/default/objects/Organization_Contact__c/fields/Volunteer_Organization__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Organization__c</fullName>
    <label>Volunteer Organization</label>
    <referenceTo>Volunteer_Organization__c</referenceTo>
    <relationshipName>R00N30000002FFibEAG</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>