force-app/main/default/objects/Organization_Contact__c/validationRules/Primary_Contact_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Contact_Required_Fields</fullName>
    <active>false</active>
    <description>Some fields are conditionally required when the contact is marked as the primary contact.</description>
    <errorConditionFormula>AND
 (
 Primary_Contact__c,
 OR(
  AND(
   Email__c = &quot;&quot;,
   Phone__c=&quot;&quot;
   ),
  First_Name__c = &quot;&quot;
  )
 )</errorConditionFormula>
    <errorMessage>Please provide First Name and either Email or Phone for Primary Contact.</errorMessage>
</ValidationRule>