force-app/main/default/objects/Organization_Contact__c/validationRules/US_Zip_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>US_Zip_Code_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(Mailing_Zip_Postal_Code__c = &quot;&quot;),
ISPICKVAL(Mailing_Country__c, &quot;United States&quot;),
NOT(REGEX(  Mailing_Zip_Postal_Code__c , &quot;\\d{5}(-\\d{4})?&quot;))
)</errorConditionFormula>
    <errorDisplayField>Mailing_Zip_Postal_Code__c</errorDisplayField>
    <errorMessage>US Zip Codes must be in 99999 or 99999-9999 format.</errorMessage>
</ValidationRule>